@@ -4,7 +4,7 @@ Test/File/Contents 0.10
 This library's module, Test::File::Contents, provides an interface for testing
 file contents. Usage is quite simple:
 
-    file_contents_is $file, $contents, $description;
+    file_contents_eq $file, $contents, $description;
     file_contents_like $file, qr/contents/, $description;
     file_md5_sum $file, $md5hash, $description;
 
